# learn-algorithm

./: .gitignore  CMakeLists.txt  README.md  template.cpp
2015-world-final/: A-amalgamated-artichokes.cpp
2019-acm-preliminary/: atoms.cpp  ball.cpp  permutation.cpp  runable
C/: hello.cpp  out
algorithm/: regex2nfa.cpp  runable
atcoder/: 100-to-105.cpp  average-length.cpp  circle.cpp  echo.cpp  non-triangular-tripet.cpp  november-30.cpp  sum-of-two-integer.cpp  swaps.cpp  tax-rate.cpp
codeforces/: accidental-victory.cpp  add-and-divide.cpp  alarm-clock-everywhere.cpp  antenna-coverage.cpp  archer.cpp  array-sharpening.cpp  array-splitting.cpp  balanced-remainders.cpp  beautiful-array.cpp  beautiful-array.py  beautiful-number.cpp  beautiful-regional-contest.cpp  beautiful-sequence.cpp  beautiful-string.cpp  binary-string-minimizing.cpp  books.cpp  changing-volumn.cpp  character-swap-easy.cpp  character-swap-hard.cpp  constanze-machine.cpp  dense-array.cpp  die-roll.cpp  dominated-subarray.cpp  dreamoon-and-wifi.cpp  equalize.cpp  even-but-not-even.cpp  everyone-is-a-winner.cpp  floor-and-mod.cpp  fridge-lockers.cpp  game-with-telephone-number.cpp  good-ol-number-coloring.cpp  league-of-leesins.cpp  level-statistic.cpp  majic-stick.cpp  make-them-similar.cpp  maximum-square.cpp  middle-class.cpp  mind-control.cpp  modulo-equality.cpp  nearest-opposite-parity.cpp  (+35 more)
codejam/: ESAbATAd-local-testing-tool.py  ESAbATAd.cpp  Indicium.cpp  expogo.cpp  interactive_runner.py  nesting-depth.cpp  parenting-partnering-return.cpp  pattern-matching.cpp  pylons.cpp  runable  vestigium.cpp
excercises/7-geometry/: 7-2-1-1.cpp  7-2-1-2.cpp
java/src/: AngryBirdsTransformers.java  DecodeTheTape.java  LeapBirthdays.java  MemoryOverflow.java  SimplifyingFractions.java  out
java/src/ACM2014/: DecodingBabyBoos.java
java/src/ICPCSG18/: ClassicalCounting.java  KnightSearch.java
leetcode/: 1028.cpp  1155-number-of-dice-rolls-with-target-sum.cpp  1277-count-square-submatrices.cpp  1328. Break a Palindrome.cpp  1395-count-number-of-teams.cpp  1402-reducing-dishes.cpp  1409-Queries-on-a-Permutation-With-Key.cpp  15-3Sum.cpp  152-maximum-product-subarray.cpp  16-3Sum-Closest.cpp  1638-Count-Substrings-That-Differ-by-One-Character.js  279-Perfect-Squares.cpp  312-burst-balloon.cpp  34. Find First and Last Position of Element in Sorted Array.js  343-integer-break.cpp  5. Longest Palindromic Substring.cpp  518-coin-change-2.cpp  5255-cells-with-odd-values-in-matrix.cpp  5256-reconstruct-a-2-row-binary-matrix.cpp  5257-number-of-closed-islands.cpp  5380-String-Matching-in-an-Array.cpp  5382-HTML-Entity-Parser.cpp  646-maximum-length-of-pair-chain.cpp  84-largest-rectangle-histogram.cpp  85-maximal-reactangle.cpp  973-k-closest-point-to-origin.cpp
solutions/: 10140-prime-number.cpp  10305-ordering-tasks.cpp  10394-twin-prime.cpp  108-maximum-sum.cpp  10814-fragtion.cpp  11388-gcd-lcm.cpp  12279-emoogle-balance.cpp  12280-digital-satire.cpp  12282-omnigravity.cpp  12582-wedding-of-sultan.cpp  13148-a-giveaway.cpp  13153-number-of-connected-components.cpp  13271-brick-walls.cpp  13272-bracket-sequence.cpp  13272-christmas-tree.cpp  13276-megamind.cpp  1730-MSLCM.cpp  2048-kattis.cpp  4-thought-kattis.cpp  572-oil-deposits.cpp  787-maximum-sub-sequence-product.cpp  AngryBirdsTransformers13278.cpp  a-difference-problem.py  ants-kattis.cpp  apaxian-kattis.cpp  backspace-kattis.cpp  bars.cpp  counting-triangle-kattis.cpp  event-planning.cpp  floating-point-hazard-2018.cpp  flow-layout.cpp  freefood-kattis.cpp  hoppers-kattis.cpp  how-do-you-add.cpp  icpc-tutorial-kattis.cpp  in  jumping-mario.cpp  largest-allowed-area-2018.cpp  largest-allowed-area.in  loo-rolls-kattis.cpp  (+21 more)
solutions/acm2014/: and-or.cpp  decoding-baby-boos.cpp
