cmake_minimum_required(VERSION 3.16)
project(learn_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(learn_algorithm
        2015-world-final/A-amalgamated-artichokes.cpp
        2019-acm-preliminary/atoms.cpp
        2019-acm-preliminary/ball.cpp
        2019-acm-preliminary/permutation.cpp
        algorithm/regex2nfa.cpp
        atcoder/100-to-105.cpp
        atcoder/average-length.cpp
        atcoder/circle.cpp
        atcoder/echo.cpp
        atcoder/non-triangular-tripet.cpp
        atcoder/november-30.cpp
        atcoder/sum-of-two-integer.cpp
        atcoder/swaps.cpp
        atcoder/tax-rate.cpp
        C/hello.cpp
        codeforces/alarm-clock-everywhere.cpp
        codeforces/antenna-coverage.cpp
        codeforces/archer.cpp
        codeforces/array-splitting.cpp
        codeforces/beautiful-array.cpp
        codeforces/beautiful-number.cpp
        codeforces/beautiful-regional-contest.cpp
        codeforces/beautiful-sequence.cpp
        codeforces/beautiful-string.cpp
        codeforces/binary-string-minimizing.cpp
        codeforces/character-swap-easy.cpp
        codeforces/character-swap-hard.cpp
        codeforces/constanze-machine.cpp
        codeforces/die-roll.cpp
        codeforces/dominated-subarray.cpp
        codeforces/dreamoon-and-wifi.cpp
        codeforces/everyone-is-a-winner.cpp
        codeforces/game-with-telephone-number.cpp
        codeforces/good-ol-number-coloring.cpp
        codeforces/majic-stick.cpp
        codeforces/make-them-similar.cpp
        codeforces/maximum-square.cpp
        codeforces/nearest-opposite-parity.cpp
        codeforces/obtain-two-zeros.cpp
        codeforces/pin-codes.cpp
        codeforces/platform-jumpping.cpp
        codeforces/power-product.cpp
        codeforces/power-transmission.cpp
        codeforces/remove-one-element.cpp
        codeforces/restricted-rps.cpp
        codeforces/reverse-substring.cpp
        codeforces/secret-password.cpp
        codeforces/snow-walking-robot.cpp
        codeforces/suits.cpp
        codeforces/sweet-problem.cpp
        codeforces/thanos-sort.cpp
        codeforces/three-friends.cpp
        codeforces/two-rival-students.cpp
        codeforces/yet-another-broken-keyboard.cpp
        codeforces/yet-another-monster-killing-problem.cpp
        excercises/7-geometry/7-2-1-1.cpp
        excercises/7-geometry/7-2-1-2.cpp
        leetcode/1028.cpp
        leetcode/1155-number-of-dice-rolls-with-target-sum.cpp
        leetcode/1277-count-square-submatrices.cpp
        leetcode/152-maximum-product-subarray.cpp
        leetcode/312-burst-balloon.cpp
        leetcode/343-integer-break.cpp
        leetcode/518-coin-change-2.cpp
        leetcode/5255-cells-with-odd-values-in-matrix.cpp
        leetcode/5256-reconstruct-a-2-row-binary-matrix.cpp
        leetcode/5257-number-of-closed-islands.cpp
        leetcode/646-maximum-length-of-pair-chain.cpp
        leetcode/84-largest-rectangle-histogram.cpp
        leetcode/85-maximal-reactangle.cpp
        leetcode/973-k-closest-point-to-origin.cpp
        solutions/acm2014/and-or.cpp
        solutions/acm2014/decoding-baby-boos.cpp
        solutions/10140-prime-number.cpp
        solutions/10305-ordering-tasks.cpp
        solutions/10394-twin-prime.cpp
        solutions/108-maximum-sum.cpp
        solutions/10814-fragtion.cpp
        solutions/11388-gcd-lcm.cpp
        solutions/12279-emoogle-balance.cpp
        solutions/12280-digital-satire.cpp
        solutions/12282-omnigravity.cpp
        solutions/12582-wedding-of-sultan.cpp
        solutions/13148-a-giveaway.cpp
        solutions/13153-number-of-connected-components.cpp
        solutions/13271-brick-walls.cpp
        solutions/13272-bracket-sequence.cpp
        solutions/13272-christmas-tree.cpp
        solutions/13276-megamind.cpp
        solutions/1730-MSLCM.cpp
        solutions/2048-kattis.cpp
        solutions/4-thought-kattis.cpp
        solutions/572-oil-deposits.cpp
        solutions/787-maximum-sub-sequence-product.cpp
        solutions/AngryBirdsTransformers13278.cpp
        solutions/ants-kattis.cpp
        solutions/apaxian-kattis.cpp
        solutions/backspace-kattis.cpp
        solutions/bars.cpp
        solutions/counting-triangle-kattis.cpp
        solutions/event-planning.cpp
        solutions/floating-point-hazard-2018.cpp
        solutions/flow-layout.cpp
        solutions/freefood-kattis.cpp
        solutions/hoppers-kattis.cpp
        solutions/how-do-you-add.cpp
        solutions/icpc-tutorial-kattis.cpp
        solutions/jumping-mario.cpp
        solutions/largest-allowed-area-2018.cpp
        solutions/loo-rolls-kattis.cpp
        solutions/minesweeper.cpp
        solutions/non-primes-factor.cpp
        solutions/owellen.cpp
        solutions/pivot-kattis.cpp
        solutions/potentiometer.cpp
        solutions/radio-commercial-kattis.cpp
        solutions/recount-kattis.cpp
        solutions/running-steps-kattis.cpp
        solutions/secret-santa-kattis.cpp
        solutions/shopaholic-kattis.cpp
        solutions/simple-equations.cpp
        solutions/speed-limit-kattis.cpp
        solutions/spliting-number.cpp
        solutions/swap2sort-kattis.cpp
        solutions/symmetric-order-kattis.cpp
        solutions/tray-bien-kattis.cpp
        solutions/visual-algo-quiz-kattis.cpp
        solutions/wedding-shopping.cpp
        solutions/yoda-kattis.cpp
        template.cpp)
